--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -11,8 +11,8 @@
     <PackageReference Include="CsvHelper" Version="33.1.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.3" />
     <PackageReference Include="MySqlConnector" Version="2.5.0" />
-    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
-    <PackageReference Include="System.CommandLine.NamingConventionBinder" Version="2.0.0-beta4.22272.1" />
+    <PackageReference Include="System.CommandLine" Version="2.0.1" />
+    <PackageReference Include="Usa.Smart.CommandLine.Hosting" Version="1.0.0" />
     <PackageReference Include="Usa.Smart.Data.Mapper" Version="2.7.0" />
   </ItemGroup>
 
