--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -20,7 +20,7 @@
     <Authors>machi_pon</Authors>
     <Copyright>Copyright (c) 2025 machi_pon</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/usausa/data-bridge</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/usausa/mofucat-data-bridge</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
